--- a/client/views/index.html
+++ b/client/views/index.html
@@ -83,7 +83,7 @@
 <script src="js/directives/datePicker.js"></script>
 <script src="js/directives/bodyMenu.js"></script>
 <script src="js/services/paginationService.js"></script>
-
+<script src="js/directives/checkList.js"></script>
 
 
 <!--controllers-->
@@ -93,7 +93,7 @@
 <script src="js/modules/tripsModule.js"></script>
 <script src="js/modules/driversModule.js"></script>
 <script src="js/modules/trucksModule.js"></script>
-<script src="js/modules/userModule.js"></script>
+<script src="js/modules/groupModule.js"></script>
 <script src="js/modules/rolesModule.js"></script>
 <script src="js/modules/partyModule.js"></script>
 <script src="js/modules/maintenanceModule.js"></script>
