--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -3,9 +3,9 @@
         <h2 class="login-heading">Login</h2>
         <div class="mt-10">
             <div class="form-group col-xs-12">
-                <label for="accountId" class="col-sm-4 col-xs-12 pall-zero">Account Name</label>
+                <label for="name" class="col-sm-4 col-xs-12 pall-zero">Account Name</label>
                 <div class="col-sm-8 col-xs-12">
-                    <input ng-model="loginParams.accountName" type="text" class="form-control" id="accountId"
+                    <input ng-model="loginParams.name" type="text" class="form-control" id="name"
                            placeholder="Account Name">
                 </div>
             </div>
