--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -30,10 +30,14 @@
                         <div class="form-group col-xs-12">
                             <label for="truckId" class="col-xs-12 col-sm-4 pall-zero">Truck Registration Number</label>
                             <div class="col-sm-8 col-xs-12">
-                                <input type="text" ng-model="driver.truckId" placeholder="Trucks" uib-typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
-                                <!--<select ng-model="driver.truckId"
+
+
+                               <!-- <input type="text" ng-model="driver.truckId" uib-typeahead="truck as truck.registrationNo for truck in trucks | filter:$viewValue" class="form-control" id="truckId" typeahead-show-hint="true" >
+-->
+                                <input type="text" ng-model="truckRegNo"  uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue" class="form-control" typeahead-min-length="1" typeahead-on-select="selectTruckId($item)"  typeahead-select-on-exact="true" typeahead-select-on-blur="true">
+                                 <!--<select ng-model="driver.truckId"
                                         ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"
-                                        class="form-control" id="truckId">
+                                        class="form-control" >
                                 </select>-->
                             </div>
                         </div>
