Fixed Auto complete in Driver, Trucks and Trips Modules

--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -241,7 +241,7 @@
                         <form class=" col-md-12" ng-show="paymentFlag">
                             <div class="col-sm-6 col-xs-12">
                                 <div class="form-group col-xs-12">
-                                    <label for="paymentdate" class="col-xs-12 col-sm-4 pall-zero">From</label>
+                                    <label for="paymentdate" class="col-xs-12 col-sm-4 pall-zero">Date</label>
                                     <div class="col-sm-8 col-xs-12">
                                         <date-picker id="paymentdate"
                                                      ng-model="paymentDetails.paymentDate"></date-picker>
