--- a/client/views/index.html
+++ b/client/views/index.html
@@ -98,6 +98,7 @@
 <script src="js/modules/partyModule.js"></script>
 <script src="js/modules/maintenanceModule.js"></script>
 <script src="js/modules/tripLanesModule.js"></script>
+<script src="js/modules/expenseMasterModule.js"></script>
 
 </body>
 </html>
