--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,6 +5,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" href="images/fav.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
     <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -47,7 +48,7 @@
                             class="caret"></span></a>
                     <ul class="dropdown-menu" ng-show="isLoggedin">
                         <li><a href="#"></a></li>
-                        <li><a href="#" ng-click="logout()" >Logout</a></li>
+                        <li><a href="#" ng-click="logout()">Logout</a></li>
 
                     </ul>
                 </li>
@@ -70,7 +71,7 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
-
+<script src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 
 
 <!--app-->
@@ -99,6 +100,7 @@
 <script src="js/modules/paymentsModule.js"></script>
 <script src="js/modules/tripLanesModule.js"></script>
 <script src="js/modules/expenseMasterModule.js"></script>
+
 
 </body>
 </html>
