--- a/client/views/index.html
+++ b/client/views/index.html
@@ -96,6 +96,7 @@
 <script src="js/modules/rolesModule.js"></script>
 <script src="js/modules/partyModule.js"></script>
 <script src="js/modules/maintenanceModule.js"></script>
+<script src="js/modules/paymentsModule.js"></script>
 <script src="js/modules/tripLanesModule.js"></script>
 <script src="js/modules/expenseMasterModule.js"></script>
 
