--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -18,32 +18,32 @@
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentsParams">
                 <tr ng-repeat="payments in currentPageOfPayments" style="text-align: center;">
                     <td data-title="'Date'" sortable="'date'" class="clickable-item col-sm-2">{{ payments.date | date:'MM-dd-yyyy'}}</td>
-                    <td data-title="'Party'" sortable="'Party'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Party'" sortable="'partyName'" class="clickable-item col-sm-2">{{
                         payments.attrs.partyName }}
                     </td>
-                    <td data-title="'Trip'" sortable="'Trip'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Trip'" sortable="'tripId'" class="clickable-item col-sm-2">{{
                         payments.attrs.tripId }}
                     </td>
-                    <td data-title="'Truck'" sortable="'Truck'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Truck'" sortable="'truckName'" class="clickable-item col-sm-2">{{
                         payments.attrs.truckName }}
                     </td>
                     <td data-title="'Description'" sortable="'description'" class="clickable-item col-sm-2">{{ payments.description
                         }}
                     </td>
-                    <td data-title="'Amount'" sortable="'cost'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Amount'" sortable="'amount'" class="clickable-item col-sm-2">{{
                         payments.amount }}
                     </td>
-                    <td data-title="'Created By'" sortable="'agent.attrs.createdByName'"
+                    <td data-title="'Created By'" sortable="'createdByName'"
                         class="clickable-item col-sm-2">{{ payments.attrs.createdByName }}
                     </td>
-                    <!--td data-title="'Action'" class="col-sm-2">
+                    <td data-title="'Action'" class="col-sm-2">
                         <a href="#" class="btn" ng-click="goToEditPaymentsPage(payments._id)">
                             <span class="glyphicon glyphicon-pencil"></span></a>
 
                         <a href="#" class="btn" ng-click="deletePaymentsRecord(payments._id)">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                    </td-->
+                    </td>
                 </tr>
                 <tr ng-if="!currentPageOfPayments || currentPageOfPayments.length === 0">
                     <td colspan="8">No Payments Records exist.</td>
