--- a/client/views/partials/ExpenseMaster/expense-master.html
+++ b/client/views/partials/ExpenseMaster/expense-master.html
@@ -8,24 +8,22 @@
 
             <h3>Expense Master</h3>
             <div class="toolbar-button-div pull-right">
-                <button class="btn  btn-blue pull-right" ng-click="goToEditExpenseTypePage()">Add Expense Type</button>
+                <button class="btn  btn-blue pull-right mb-10" ng-click="goToEditExpenseTypePage()">Add Expense Type</button>
             </div>
 
 
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseMasterParams" >
+            <table class="table table-bordered table-striped table-condensed table-hover text-center" ng-table="expenseMasterParams" >
                 <tr ng-repeat="expense in currentPageOfexpenses">
                     <td data-title="'Name'"  sortable="'name'" class="clickable-item col-sm-2" >{{ expense.expenseName }}</td>
                     <td data-title="'Created By'"  sortable="'agent.attrs.createdByName'" class="clickable-item col-sm-2" >{{ expense.attrs.createdByName }}</td>
                     <td data-title="'Action'" class="col-sm-1">
-                        <md-button>
-                            <md-icon type="button" class="btn" ng-click="goToEditExpenseTypePage(expense._id)">
-                                <span class="glyphicon glyphicon-pencil"></span></md-icon>
-                        </md-button>
 
-                        <md-button>
-                            <md-icon type="button" class="btn" ng-click="deleteExpense(expense._id)">
-                                <span class="glyphicon glyphicon-remove"></span></md-icon>
-                        </md-button>
+                            <a type="button" class="btn" ng-click="goToEditExpenseTypePage(expense._id)">
+                                <span class="glyphicon glyphicon-pencil"></span></a>
+
+                            <a type="button" class="btn" ng-click="deleteExpense(expense._id)">
+                                <span class="glyphicon glyphicon-remove"></span></a>
+
                     </td>
                 </tr>
                 <tr ng-if="!currentPageOfexpenses || currentPageOfexpenses.length === 0">
