--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -10,15 +10,36 @@
                 <form class="mt-10">
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group col-xs-12">
-                            <label for="vehicleNumber" class="col-sm-4 col-xs-12 pall-zero ">Vehicle Number</label>
+                            <label class="col-sm-4 col-xs-12 pall-zero ">Vehicle Number</label>
                             <div class="col-sm-8 col-xs-12">
-                                <select ng-model="maintenanceDetails.vehicleNumber"
-                                        ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"
-                                        class="form-control" id="vehicleNumber">
-                                </select>
+
+                                <input type="text" ng-model="truckRegNo"
+                                       uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
+                                       class="form-control" typeahead-min-length="1"
+                                       typeahead-on-select="selectTruckId($item)"
+                                       typeahead-select-on-exact="true" placeholder="Registration Num"
+                                       typeahead-no-results="noTrucks">
+                                <div ng-show="noTrucks">
+                                    <i class="glyphicon glyphicon-remove red"></i>
+                                    <span class="red"> No Results Found </span>
+                                </div>
                             </div>
                         </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-4 col-xs-12 pall-zero ">Expense Type</label>
+                            <div class="col-sm-8 col-xs-12">
 
+                                <input type="text" ng-model="expenseTitle"
+                                        uib-typeahead="expense.expenseName for expense in expenses  |                                                           filter:$viewValue" class="form-control" typeahead-min-length="1"
+                                       typeahead-on-select="selectExpenseType($item)"
+                                       typeahead-select-on-exact="true" placeholder="Expense Type"
+                                       typeahead-no-results="noExpenseTypes">
+                                <div ng-show="noExpenseTypes">
+                                    <i class="glyphicon glyphicon-remove red"></i>
+                                    <span class="red"> No Results Found </span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="form-group col-xs-12">
                             <label for="description" class="col-sm-4 col-xs-12 pall-zero">Repair Description</label>
                             <div class="col-xs-12 col-sm-8">
@@ -27,57 +48,33 @@
                                        placeholder="Description">
                             </div>
                         </div>
-                        <div class="form-group col-xs-12">
-                            <label for="description" class="col-sm-4 col-xs-12 pall-zero">Mechanic Shed Name</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="maintenanceDetails.shedName" type="text" class="form-control"
-                                       id="shed"
-                                       placeholder="Shed Name">
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label for="description" class="col-sm-4 col-xs-12 pall-zero">Area</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="maintenanceDetails.shedArea" type="text" class="form-control"
-                                       id="area"
-                                       placeholder="Area">
-                            </div>
-                        </div>
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group col-xs-12">
                             <label for="date" class="col-sm-4 col-xs-12 pall-zero">Date</label>
                             <div class="col-xs-12 col-sm-8">
-                                    <date-picker id="date" ban-future="'banFutureDate'" ng-model="maintenanceDetails.date"></date-picker>
+                                <date-picker id="date" ban-future="'banFutureDate'"
+                                             ng-model="maintenanceDetails.date"></date-picker>
                             </div>
                         </div>
-                        <div class="form-group col-xs-12">
-                            <label for="amount" class="col-xs-12 col-sm-4 pall-zero">Payment Type</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="maintenanceDetails.paymentType" type="text" class="form-control" id="paymenttype"
-                                       placeholder="Payment Type"></div>
-                        </div>
+
                         <div class="form-group col-xs-12">
                             <label for="amount" class="col-xs-12 col-sm-4 pall-zero">Amount</label>
                             <div class="col-xs-12 col-sm-8">
-                                <input ng-model="maintenanceDetails.cost" type="number" class="form-control" id="amount"
-                                       placeholder="Amount"></div>
+                                <input ng-model="maintenanceDetails.cost" type="number" class="form-control"                                            id="amount" placeholder="Amount"></div>
                         </div>
                     </div>
                     <div class="clearfix"></div>
-
                     <div class="col-xs-4 col-xs-push-4">
-
                         <div>
                             <div class="alert alert-danger" role="alert" ng-show="maintenanceDetails.error.length">
                                 <ul>
-                                    <li  ng-repeat="error in maintenanceDetails.error">{{error}}</li>
+                                    <li ng-repeat="error in maintenanceDetails.error">{{error}}</li>
                                 </ul>
                             </div>
-
                             <div class="alert alert-success" role="alert" ng-show="maintenanceDetails.success.length">
                                 <ul>
-                                    <li  ng-repeat="success in maintenanceDetails.success">{{success}}</li>
+                                    <li ng-repeat="success in maintenanceDetails.success">{{success}}</li>
                                 </ul>
                             </div>
                         </div>
@@ -90,8 +87,6 @@
                     </div>
                 </form>
             </div>
-
-
         </div>
     </div>
 </div>
