--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -1,5 +1,5 @@
 <top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="maintenanceEditController">
+<div class="container-fluid" ng-controller="expenseEditController">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
@@ -41,9 +41,9 @@
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-                            <label for="description" class="col-sm-4 col-xs-12 pall-zero">Repair Description</label>
+                            <label for="description" class="col-sm-4 col-xs-12 pall-zero">Description</label>
                             <div class="col-xs-12 col-sm-8">
-                                <input ng-model="maintenanceDetails.description" type="text" class="form-control"
+                                <input ng-model="expenseDetails.description" type="text" class="form-control"
                                        id="description"
                                        placeholder="Description">
                             </div>
@@ -54,32 +54,32 @@
                             <label for="date" class="col-sm-4 col-xs-12 pall-zero">Date</label>
                             <div class="col-xs-12 col-sm-8">
                                 <date-picker id="date" ban-future="'banFutureDate'"
-                                             ng-model="maintenanceDetails.date"></date-picker>
+                                             ng-model="expenseDetails.date"></date-picker>
                             </div>
                         </div>
 
                         <div class="form-group col-xs-12">
                             <label for="amount" class="col-xs-12 col-sm-4 pall-zero">Amount</label>
                             <div class="col-xs-12 col-sm-8">
-                                <input ng-model="maintenanceDetails.cost" type="number" class="form-control"                                            id="amount" placeholder="Amount"></div>
+                                <input ng-model="expenseDetails.cost" type="number" class="form-control"                                            id="amount" placeholder="Amount"></div>
                         </div>
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4">
                         <div>
-                            <div class="alert alert-danger" role="alert" ng-show="maintenanceDetails.error.length">
+                            <div class="alert alert-danger" role="alert" ng-show="expenseDetails.error.length">
                                 <ul>
-                                    <li ng-repeat="error in maintenanceDetails.error">{{error}}</li>
+                                    <li ng-repeat="error in expenseDetails.error">{{error}}</li>
                                 </ul>
                             </div>
-                            <div class="alert alert-success" role="alert" ng-show="maintenanceDetails.success.length">
+                            <div class="alert alert-success" role="alert" ng-show="expenseDetails.success.length">
                                 <ul>
-                                    <li ng-repeat="success in maintenanceDetails.success">{{success}}</li>
+                                    <li ng-repeat="success in expenseDetails.success">{{success}}</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="margin-top-20">
-                            <button type="submit" class="btn btn-primary" ng-click="AddorUpdateMaintenance()">Submit
+                            <button type="submit" class="btn btn-primary" ng-click="AddorUpdateExpense()">Submit
                             </button>
                             <button type="submit" class="btn btn-red" ng-click="cancel()">Cancel
                             </button>
