--- a/client/views/partials/payments/paymentsEdit.html
+++ b/client/views/partials/payments/paymentsEdit.html
@@ -15,7 +15,7 @@
                                 <date-picker id="date" ban-future="'banFutureDate'" ng-model="paymentsDetails.date"></date-picker>
                             </div>
                         </div>
-                        <div class="form-group col-xs-12">
+                        <!--<div class="form-group col-xs-12">
                             <label for="tripId" class="col-sm-4 col-xs-12 pall-zero ">Trip</label>
                             <div class="col-sm-8 col-xs-12">
                                 <input type="text" ng-model="tripName"
@@ -28,12 +28,12 @@
                                     <i class="glyphicon glyphicon-remove red"></i>
                                     <span class="red"> No Results Found </span>
                                 </div>
-                                <!--select ng-model="paymentsDetails.tripId"
+                                &lt;!&ndash;select ng-model="paymentsDetails.tripId"
                                         ng-options="trip._id as trip.tripId for trip in trips" type="text"
                                         class="form-control" id="tripId">
-                                </select-->
+                                </select&ndash;&gt;
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group col-xs-12">
                             <label for="description" class="col-sm-4 col-xs-12 pall-zero">Description</label>
                             <div class="col-xs-12 col-sm-8">
@@ -63,7 +63,7 @@
                                 </select-->
                             </div>
                         </div>
-                        <div class="form-group col-xs-12">
+                        <!--<div class="form-group col-xs-12">
                             <label for="truckId" class="col-sm-4 col-xs-12 pall-zero ">Truck</label>
                             <div class="col-sm-8 col-xs-12">
                                 <input type="text" ng-model="truckRegNo"
@@ -76,12 +76,12 @@
                                     <i class="glyphicon glyphicon-remove red"></i>
                                     <span class="red"> No Results Found </span>
                                 </div>
-                                <!--select ng-model="paymentsDetails.truckId"
+                                &lt;!&ndash;select ng-model="paymentsDetails.truckId"
                                         ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"
                                         class="form-control" id="truckId">
-                                </select-->
+                                </select&ndash;&gt;
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group col-xs-12">
                             <label for="amount" class="col-xs-12 col-sm-4 pall-zero">Amount</label>
                             <div class="col-xs-12 col-sm-8">
